--- a/client/src/components/AddButtons/addButtons.css
+++ b/client/src/components/AddButtons/addButtons.css
@@ -11,16 +11,69 @@
     text-decoration: none;
     overflow: hidden;
     user-select: none;
-    display: flex;
     font-size: large;
 }
 
 .add-group-btn:hover {
-    background-color: rgb(214, 214, 214) !important;
+    background-color: rgb(214, 214, 214);
     color: #015fe2;
     transform: scale(1.1);
 }
 
 .add-group-btn:active {
     transform: scale(0.9);
+}
+
+.add-custom-btn {
+    background-color: #23d400;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition-duration: 0.4s;
+    text-decoration: none;
+    overflow: hidden;
+    user-select: none;
+    font-size: normal;
+    margin-left: 0.5rem;
+    margin-right: 0.15rem;
+    margin-top: -0.2rem;
+    height: 2rem;
+    font-size: large;
+}
+
+.add-custom-btn:hover {
+    background-color: rgb(214, 214, 214);
+    color: #23d400;
+}
+
+.cancel-custom-btn {
+    background-color: #d80000;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition-duration: 0.4s;
+    text-decoration: none;
+    overflow: hidden;
+    user-select: none;
+    font-size: normal;
+    margin-left: 0.2rem;
+    height: 2rem;
+    font-size: large;
+}
+
+.cancel-custom-btn:hover {
+    background-color: rgb(214, 214, 214);
+    color: #d80000;
+}
+
+.input-custom {
+    border: none;
+    border-radius: 0.3rem;
+    height: 2.5rem;
+    width: 15rem;
+    text-align: center;
+    margin-top: -0.2rem;
+    margin-bottom: 0.2rem;
 }
