--- a/client/src/components/ItemsToAdd/itemsToAdd.css
+++ b/client/src/components/ItemsToAdd/itemsToAdd.css
@@ -44,3 +44,29 @@
     margin-bottom: 5px;
     border-radius: 0.7rem;
 }
+
+.add-item-div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(38, 139, 255, 0.82);
+}
+
+.add-item-text {
+    color: whitesmoke;
+    font-size: x-large;
+    font-weight: bold;
+    margin-top: -1rem;
+}
+
+.add-item-text-add {
+    color: whitesmoke;
+    margin-top: -0.5rem;
+}
