--- a/client/src/components/Bookmark/bookmark.css
+++ b/client/src/components/Bookmark/bookmark.css
@@ -23,6 +23,8 @@
 .zalozka-nadpis {
     margin-top: 0.1rem;
     padding-top: 1rem;
+    text-transform: capitalize;
+    transition-duration: 0.4s;
 }
 
 .add-tab {
@@ -81,11 +83,6 @@
     cursor: pointer;
 }
 
-.zalozka-nadpis {
-    text-transform: capitalize;
-    transition-duration: 0.4s;
-}
-
 .zalozka-obsah {
     color: rgb(31, 31, 31);
     background-color: rgb(89, 165, 253);
@@ -93,4 +90,53 @@
     border-style: dashed;
     border-color: rgb(165, 207, 255);
     border-width: 1px;
+}
+
+.zalozka-nazov {
+    border: none;
+    border-radius: 0.3rem;
+    height: 1.85rem;
+    text-align: center;
+    transition: 0.4s ease-in-out;
+}
+
+.zalozka-nazov:focus,
+.zalozka-nazov:hover {
+    outline: none;
+    border-color: rgb(121, 189, 252);
+    border-style: solid;
+    border-radius: 0.5rem;
+    box-shadow: 0 0 0 3px #76b6ff;
+}
+
+.zalozka-nazov:hover::placeholder,
+.zalozka-nazov:focus::placeholder {
+  color: rgb(2, 108, 207);
+}
+
+.save-btn {
+    color: rgb(19, 226, 19);
+    transition-duration: 0.4s;
+}
+
+.save-btn:hover {
+    transform: scale(1.3);
+}
+
+.edit-btn {
+    color: rgb(146, 74, 7);
+    transition-duration: 0.4s;
+}
+
+.edit-btn:hover {
+    transform: scale(1.5);
+}
+
+.delete-bookmark-btn {
+    color: rgb(224, 0, 0);
+    transition-duration: 0.4s;
+}
+
+.delete-bookmark-btn:hover {
+    transform: scale(1.5);
 }
